# plover-per-application-state

./: .gitignore  README.md  setup.cfg
plover_per_application_state/: __init__.py  command.py  extension.py
plover_per_application_state/state/: __init__.py  manager.py  window_state_collection.py
plover_per_application_state/transition/: __init__.py  details.py
plover_per_application_state/transition/handler/: __init__.py  default.py  dynamic_title.py  handler.py
plover_per_application_state/transition_handler/: __init__.py  default.py  handler.py
