[metadata]
name = plover-per-application-state
keywords = plover plover_plugin
version = 0.0.1
description = Plover plugin to make translation state per application
long_description = file: README.md
long_description_content_type = text/markdown
author = Pipatooa
author_email = pipatooa@pipatooa.co.uk
url = https://github.com/Pipatooa/plover-per-application-state


[options]
zip_safe = True
python_requires = >=3.7
setup_requires =
  setuptools >= 30.3.0
install_requires =
  plover >= 4.0.0dev12
packages = find:
include_package_data = True

[options.packages.find]
include = plover_per_application_state*

