[metadata]
name = plover-per-application-state
keywords = plover plover_plugin
version = 1.1.0
description = Plover plugin to make translation state function per application window and tab 
long_description = file: README.md
long_description_content_type = text/markdown
author = Pipatooa
author_email = pipatooa@pipatooa.co.uk
url = https://github.com/Pipatooa/plover-per-application-state


[options]
zip_safe = True
python_requires = >=3.7
setup_requires =
  setuptools >= 30.3.0
install_requires =
  plover >= 4.0.0dev12
  plover-application-controls >= 1.1.0
packages = find:
include_package_data = True

[options.packages.find]
include = plover_per_application_state*

[options.entry_points]
plover.command =
  per_application_state = plover_per_application_state.command:command
plover.extension =
  per_application_state = plover_per_application_state:PerApplicationStateExtension
